--- a/index.html
+++ b/index.html
@@ -2,14 +2,44 @@
 <html>  
 <head>  
  <title>My Website</title>  
+ <style>  
+ body {  
+ background-color: #f2f2f2;  
+ font-family: Arial, sans-serif;  
+ }  
+  
+ h1 {  
+ color: #333333;  
+ text-align: center;  
+ }  
+  
+ p {  
+ color: #666666;  
+ font-size: 18px;  
+ line-height: 1.5;  
+ margin: 20px;  
+ }  
+  
+ ul {  
+ list-style-type: none;  
+ margin: 0;  
+ padding: 0;  
+ }  
+  
+ li {  
+ display: inline-block;  
+ margin-right: 10px;  
+ }  
+ </style>  
 </head>  
 <body>  
  <h1>Welcome to My Website</h1>  
- <p>This is a paragraph of text.</p>  
+ <p>This is a paragraph of text. It's just a simple example of an index page.</p>  
  <ul>  
- <li>Item 1</li>  
- <li>Item 2</li>  
- <li>Item 3</li>  
+ <li><a href="#">Home</a></li>  
+ <li><a href="#">About</a></li>  
+ <li><a href="#">Services</a></li>  
+ <li><a href="#">Contact</a></li>  
  </ul>  
 </body>  
 </html>
