--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="book p3d">
         <div class="front-cover p3d">
             <div class="inside page p3d flip">
-                <p>亲爱的XXX，我用这篇情书表达我内心深处的感受，向你诉说我对你的深深爱意。见到你的那一刻起，你的温柔与美丽就深深地吸引着我，让我心动不已。 每次和你相聚，我的心跳似乎变得更快。你的笑容如阳光般灿烂，每一个眼神都能融化我内心的冰霜。你的聪明才智和善解人意让我感到无比敬佩，我觉得自己是世界上最幸运的人，能有机会与你共度每一天。
+                <p>亲爱的文，我用这篇情书表达我内心深处的感受，向你诉说我对你的深深爱意。见到你的那一刻起，你的温柔与美丽就深深地吸引着我，让我心动不已。 每次和你相聚，我的心跳似乎变得更快。你的笑容如阳光般灿烂，每一个眼神都能融化我内心的冰霜。你的聪明才智和善解人意让我感到无比敬佩，我觉得自己是世界上最幸运的人，能有机会与你共度每一天。
                 </p>
             </div>
             <div class="outside page">
